tests/NormalTests/paczka1/small_fuzzy/26991950.err
Error in line 2: BJaUFlcG S58 34,4
Error in line 6: S58 S67 86,8
